# LocalAI_Bench

./: .gitignore  ApplicationState.md  ProjectPlan.md  README.md  ai_developer_workflow.md  dev_app.sh  mypy-checks.sh  mypy.ini  mypy.sh  package-lock.json  project_manager_workflow.md  pyproject.toml  svelte-checks.sh
.github/: copilot-instructions.md
.github/prompts/: developer.prompt.md  pm.prompt.md
agents/: ProjectPlan.md  prompts.md  workflow.md
agents/analyst_tasks/: 006_task_details.json  calrification_006.json
agents/pm_tasks/: 000.md  001.md  002.md  003.md  004.md  005.md  006.md
agents/roles/: analyst.md
agents/tasks_details/: 000.json  001.json  002.json  004.json  005.json
app/: config.py  enums.py  exceptions.py  main.py  models.py  repositories.py  routes.py  schemas.py  services.py  utils.py
app/adapters/: base.py  huggingface.py  ollama.py
app/modules/benchmark_service/: __init__.py  enums.py  repositories.py  routes.py  service.py
app/modules/category_service/: repositories.py  routes.py  schemas.py  service.py
app/modules/import_export_service/: enums.py  routes.py  schemas.py  service.py
app/modules/model_service/: models.py  repositories.py  routes.py  schemas.py  service.py
app/modules/task_service/: models.py  repositories.py  schemas.py  service.py
app/services/benchmark_service/: __init__.py  models.py  repositories.py  routes.py  schemas.py  service.py
ui/: local_bench_theme.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ui/src/: app.css  app.html  app.postcss
ui/src/routes/: +page.svelte  (+1 more)
(+47 files in other folders)
